overflow fixed and theme

--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ body {
 	background: var(--bg);
 	color: var(--text);
 	background-image: url(assets/images/graph-paper.svg);
+	overflow-x: hidden;
 }
 
 /* header */
@@ -266,9 +267,9 @@ code {
 }
 
 blockquote {
-	border-left: 4px solid rgba(2, 6, 23, 0.06);
+	border-left: 4px solid rgb(44, 44, 44);
 	padding: 0.6rem;
-	background: rgba(11, 116, 209, 0.03);
+	background: rgba(128, 128, 128, 0.5);
 	border-radius: 6px
 }
 
@@ -492,8 +493,8 @@ body.dark {
 	--panel: #202020;
 	--muted: #9ca3af;
 	--text: #e6edf3;
-	--accent: #1e1e1e;
-	--accent-contrast: #ffdd00;
+	--accent: #ffcc00;
+	--accent-contrast: #1e1e1e;
 	--sidebar-bg: linear-gradient(180deg, #2b2b2b, #3b3b3b);
 	--sidebar-ink: #ffffff;
 }
